[gd_scene load_steps=13 format=2]

[ext_resource path="res://carton.png" type="Texture" id=1]
[ext_resource path="res://carton.gd" type="Script" id=2]
[ext_resource path="res://BOOK.tscn" type="PackedScene" id=3]
[ext_resource path="res://perdu.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://HUD.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0558, 11.3259 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 70.0427, 0.3284, 0, 0, 0, 0, 907.596, 1.82671 )
}

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 38
outline_color = Color( 0.968627, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )
BOOK = ExtResource( 3 )

[node name="carton" type="Area2D" parent="."]
position = Vector2( 114.129, 535.757 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="carton"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="carton"]
position = Vector2( -4.50044, -8.40602 )
shape = SubResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -1.65277, -0.572739 )
rotation = 1.51686e-08

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -413.715
margin_top = 19.7883
margin_right = -35.7151
margin_bottom = 107.788
custom_fonts/font = SubResource( 4 )
text = "Score : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="HUD"]
margin_left = 616.175
margin_top = 85.6359
margin_right = 973.175
margin_bottom = 147.636
custom_fonts/font = SubResource( 5 )
text = "Vies : 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayLabel" type="Label" parent="HUD"]
visible = false
margin_left = 50.9424
margin_top = 389.56
margin_right = 983.942
margin_bottom = 455.56
custom_fonts/font = SubResource( 6 )
text = "Pressez \"R\" pour rejouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bookTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="perdu" type="Sprite" parent="."]
visible = false
position = Vector2( 512.505, 300.703 )
scale = Vector2( 0.517779, 0.840309 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="carton" to="." method="_on_carton_body_entered"]
[connection signal="timeout" from="bookTimer" to="." method="_on_bookTimer_timeout"]
